[package]
name = "RustMesh"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
quinn = "0.11.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[[bin]]
name = "dameon"
test = false
bench = false

[[bin]]
name = "cli"
test = false
bench = false
